# tumbler

./: README.md
data/: tumbler_initial_positions.csv
scripts/: run_nozzle_test.sh  run_tumbler_test.sh
source/: CMakeLists.txt  test_GPU_nozzle.cpp  test_GPU_tumbler.cpp  test_GPU_tumbler_settling.cpp  test_GPU_tumbler_spinning.cpp
